# creature_feature

./: .gitignore  Cargo.toml  README.md
benches/: bench_criterionized_runner.rs
benchmarks/: 2021_12_14.txt
doc/: explaining-benchmarks.md
src/: _main.rs  accum_ftzr.rs  accumulators.rs  bench.rs  bench_criterionized.rs  bookends.rs  compile_checks.rs  convert.rs  feature_from.rs  featurizers.rs  for_each.rs  from_token.rs  gap_gram.rs  hashedfeature.rs  hastokens.rs  internal.rs  lib.rs  main.rs  multiftzr.rs  n_gram.rs  n_slice.rs  skip_schema.rs  slice_gram.rs  token_from.rs  tokengroup.rs  whole.rs  whole_empty.rs
