[package]
name = "creature_feature"
version = "0.1.0"
authors = ["Logan Dimond"]
edition = "2018"
license = "MPL-2.0"
exclude = ["/benchmarks", "todo.txt"]
description = "Composable n-gram combinators that are ergonomic and bare-metal fast."

#keywords = ["featurize", "featurization", "nlp", "ngram", "ngrams", "ml", "tokenization"]

#categories = ["algorithms", "no-std"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde1 = ["serde"]

[package.metadata.playground]
features = ["serde"]



[dependencies]
fxhash = {version = "0.2.1"}
serde = { version = "1.0.103", features = ["derive"], optional = true }
