[package]
name = "creature_feature"
version = "0.1.2"
authors = ["Logan Dimond"]
edition = "2018"
license = "MPL-2.0"
repository = "https://github.com/Lambda-Logan/creature_feature/"
homepage = "https://github.com/Lambda-Logan/creature_feature/blob/master/README.md"
exclude = ["/benchmarks", "todo.txt"]
description = "Composable n-gram combinators that are ergonomic and bare-metal fast."

#keywords = ["featurize", "featurization", "nlp", "ngram", "ngrams", "ml", "tokenization", "n-grams"]

#categories = ["algorithms", "no-std"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde1 = ["serde"]

[package.metadata.playground]
features = ["serde"]



[dependencies]
fxhash = {version = "0.2.1"}
nohash-hasher = "0.2.0"
serde = { version = "1.0.103", features = ["derive"], optional = true }
